Enable WebRTCPipeWireCapturer feature for QtWebEngine

This is needed to have screen capture on Wayland using pipewire. It's
optional because it crashes with pipewire-3 unless using a patched
version of QtWebEngine

BUG: 450840